<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/seriesFragment">
    <fragment
        android:id="@+id/seriesFragment"
        android:name="com.example.androidchallenge.ui.main.fragments.SeriesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_series">
        <action
            android:id="@+id/open_details"
            app:destination="@id/seriesDetailsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.androidchallenge.ui.main.fragments.FavoritesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/open_details"
            app:destination="@id/seriesDetailsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/personsFragment"
        android:name="com.example.androidchallenge.ui.main.fragments.PersonsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_persons" />
    <fragment
        android:id="@+id/seriesDetailsFragment"
        android:name="com.example.androidchallenge.ui.series.fragment.SeriesDetailsFragment"
        android:label="@string/series"
        tools:layout="@layout/fragment_series_details">
        <argument
            android:name="sid"
            app:argType="integer" />
        <action
            android:id="@+id/open_details"
            app:destination="@id/episodeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchesFragment"
        android:name="com.example.androidchallenge.ui.search.fragment.SearchesFragment"
        android:label="{query}"
        tools:layout="@layout/fragment_searches">
        <argument
            android:name="query"
            app:argType="string" />

        <action
            android:id="@+id/open_details"
            app:destination="@id/seriesDetailsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/episodeDetailsFragment"
        android:name="com.example.androidchallenge.ui.series.fragment.EpisodeDetailsFragment"
        android:label="@string/episode"
        tools:layout="@layout/fragment_episode_details">
        <argument
            android:name="eid"
            app:argType="integer" />
    </fragment>
    <dialog
        android:id="@+id/addAuthenticationFragment"
        android:name="com.example.androidchallenge.ui.authentication.fragment.AddAuthenticationFragment"
        android:label="@string/authentication"
        tools:layout="@layout/fragment_add_authentication" />
    <dialog
        android:id="@+id/authenticationFragment"
        android:name="com.example.androidchallenge.ui.authentication.fragment.AuthenticationFragment"
        android:label="@string/authentication"
        tools:layout="@layout/fragment_authentication"  />
</navigation>