<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.example.androidchallenge.data.response.Status" />

        <variable
            name="viewModel"
            type="com.example.androidchallenge.ui.episode.viewmodel.EpisodeDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_episode"
            glide="@{viewModel.episode.data.image.original}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/design_default_color_secondary"
            android:contentDescription="@string/episode_image_desc"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_season_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@{String.format(@string/season_episode_nb, viewModel.episode.data.season,viewModel.episode.data.number)}"
            android:textColor="@color/white"
            android:textSize="@dimen/bigText"
            app:layout_constraintBottom_toBottomOf="@+id/img_episode"
            app:layout_constraintStart_toStartOf="@+id/img_episode" />

        <TextView
            android:id="@+id/tv_label_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textSize="@dimen/smallText"
            android:textColor="@color/design_default_color_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_episode" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.episode.data.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_name" />

        <TextView
            android:id="@+id/tv_label_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:text="@string/summary"
            android:textSize="@dimen/smallText"
            android:textColor="@color/design_default_color_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_summary"
            html="@{viewModel.episode.data.summary}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_summary" />

        <include
            android:id="@+id/error"
            layout="@layout/content_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility='@{viewModel.episode.status == Status.ERROR  ? View.VISIBLE : View.GONE, default="gone"}'
            app:click='@{() -> viewModel.loadEpisode()}'
            app:message='@{viewModel.episode.message }' />

        <include
            android:id="@+id/loader"
            layout="@layout/content_loader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility='@{viewModel.episode.status == Status.LOADING ? View.VISIBLE : View.GONE,default="gone"}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>