<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.example.androidchallenge.data.response.Status" />

        <variable
            name="viewModel"
            type="com.example.androidchallenge.ui.series.viewmodel.SeriesDetailsViewModel" />

        <import type="com.example.androidchallenge.util.Util" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_series"
                    glide="@{viewModel.details.data.image.original}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/series_image_desc"
                    app:layout_constraintDimensionRatio="16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_label_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/name"
                    android:textSize="@dimen/smallText"
                    android:textColor="@color/design_default_color_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_series" />

                <TextView
                    android:id="@+id/tv_series_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.details.data.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_name" />

                <TextView
                    android:id="@+id/tv_label_summary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/summary"
                    android:textSize="@dimen/smallText"
                    android:textColor="@color/design_default_color_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_series_name" />

                <TextView
                    android:id="@+id/tv_summary"
                    html="@{viewModel.details.data.summary}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_summary" />

                <TextView
                    android:id="@+id/tv_label_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/series_genres"
                    android:textSize="@dimen/smallText"
                    android:textColor="@color/design_default_color_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_summary" />

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{Util.joinToString(viewModel.details.data.genres)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_genres" />

                <TextView
                    android:id="@+id/tv_label_broadcast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@{@string/broadcast}"
                    android:textSize="@dimen/smallText"
                    android:textColor="@color/design_default_color_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

                <TextView
                    android:id="@+id/tv_first_broadcast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{@string/series_first_broadcast(viewModel.getFirstBroadcast(viewModel.seasons.data))}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_broadcast" />

                <TextView
                    android:id="@+id/tv_last_broadcast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{@string/series_last_broadcast(viewModel.getLastBroadcast(viewModel.seasons.data))}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_first_broadcast" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{@string/series_time(viewModel.getTotalAirTime(viewModel.seasons.data))}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_last_broadcast" />

                <TextView
                    android:id="@+id/tv_label_seasons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/series_seasons"
                    android:textSize="@dimen/smallText"
                    android:textColor="@color/design_default_color_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_time" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_seasons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_seasons" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/error"
            layout="@layout/content_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility='@{viewModel.details.status == Status.ERROR || viewModel.seasons.status == Status.ERROR ? View.VISIBLE : View.GONE, default="gone"}'
            app:click='@{() -> viewModel.loadDetails()}'
            app:message='@{viewModel.details.message ?? viewModel.seasons.message }' />

        <include
            android:id="@+id/loader"
            layout="@layout/content_loader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility='@{viewModel.details.status == Status.LOADING || viewModel.seasons.status == Status.LOADING ? View.VISIBLE : View.GONE,default="visible"}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>